--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-toastr": "^3.0.0",
     "shortid": "^2.2.16",
+    "toastr": "^2.1.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
