--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
     "gh-pages": "^3.2.3",
     "modern-normalize": "^1.1.0",
     "prop-types": "^15.7.2",
@@ -14,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "react-toastr": "^3.0.0",
     "shortid": "^2.2.16",
     "toastr": "^2.1.4",
